--- a/www/lavazem.html
+++ b/www/lavazem.html
@@ -23,7 +23,7 @@
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
 			document.addEventListener("deviceready", onDeviceReady, false);
 			
-			onDeviceReady();
+			//onDeviceReady();
 		}
 
 		function onDeviceReady() {
@@ -125,16 +125,41 @@
 				<div id="main">
 
 				<ul class="list" id="list">
-					<li >شماره 0</li>
-					<li >شماره 1</li>
-					<li >شماره 2</li>
-					<li >شماره 3</li>
-					<li >شماره 4</li>
-					<li >شماره 5</li>
-					<li >شماره 6</li>
-					<li >شماره 7</li>
-					<li >شماره 8</li>
-					<li >شماره 9</li>
+					<li >قرآن، دعا و زیارت جیبی</li>
+					<li >گذرنامه</li>
+					<li >تلفن همراه</li>
+					<li >شارژر تلفن همراه</li>
+					<li >چفیه</li>
+					<li >داروهای ضروری</li>
+					<li >قرص سرماخوردگی</li>
+					<li >پماد باز شدن عضلات پا</li>
+					<li >باند کشی برای بستن پا</li>
+					<li >کرم مناسب تاول و عرق سوز</li>
+					<li >کرم ضد آفتاب</li>
+					<li >دستکش مناسب</li>
+					<li >کیسه خواب</li>
+					<li >جوراب</li>
+					<li >کلاه</li>
+					<li >پوشش گوش</li>
+					<li >عینک طبی</li>
+					<li >عینک آفتابی</li>
+					<li >شانه</li>
+					<li >لباس گرم دکمه یا زیپ دار</li>
+					<li >کفش مناسب پیاده روی</li>
+					<li >لباس زیر به اندازه کافی</li>
+					<li >پتوی مسافرتی</li>
+					<li >سوزن و نخ</li>
+					<li >مقداری خشکبار</li>
+					<li >صابون</li>
+					<li >دستمال کاغذی</li>
+					<li >چتر سبک</li>
+					<li >پول عراق (دینار)</li>
+					<li >دوربین عکاسی</li>
+					<li >کاغذ و قلم</li>
+					<li >چراغ قوه</li>
+					<li >قاشق و چنگال</li>
+					<li >مسواک و خمیردندان</li>
+					<li >چسب زخم</li>
 				</ul>
 				
 				
