--- a/www/index.html
+++ b/www/index.html
@@ -277,6 +277,8 @@
 			<br/>0<br/>0<br/>
 			<a href="map.html">map</a><br/><br/>
 			<a href="ashura.html">ashura</a><br/><br/>
+			<a href="audio.html">audio</a><br/><br/>
+			<a href="audio2.html">audio2</a><br/><br/>
 			<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
 <script>
 
