--- a/www/index.html
+++ b/www/index.html
@@ -274,9 +274,8 @@
 			<div id="small" class="a1" onclick="openURL('http://jazebe.smgroup.ir',false,false);" >
 				<span id="text"><p>بسم الله الرحمن الرحیم</p></span>
 			</div>
-			<br/>0<br/>0<br/>
 			<a href="map.html">map</a><br/><br/>
-			<a href="ashura.html">ashura</a><br/><br/>
+			<a href="ziyarat-ashura.html">ashura</a><br/><br/>
 			<a href="audio.html">audio</a><br/><br/>
 			<a href="audio2.html">audio2</a><br/><br/>
 			<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
