--- a/www/audio.html
+++ b/www/audio.html
@@ -163,8 +163,10 @@
 
 	function playAudio(file){
 		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
-			file = "file:///android_assets/www/" + file;
+			file = "/android_asset/www/" + file;
 		}
+		alert(file);
+		
 		audio = new Media(file, function(){ // success callback
 			console.log("playAudio():Audio Success");
 		}, function(error){ // error callback
