--- a/www/audio2.html
+++ b/www/audio2.html
@@ -79,8 +79,9 @@
 <script>
 	function playAudio(file){
 		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
-			file = "file:///android_assets/" + file;
+			file = "/android_asset/" + file;
 		}
+		alert(file);
 		
 		audio = new Media(file, function(){ // success callback
 			console.log("playAudio():Audio Success");
