--- a/www/index - Copy.html
+++ b/www/index - Copy.html
@@ -7,8 +7,8 @@
     <title>بسم الله الرحمن الرحیم</title>
 	
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/font.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/font.css" />
     
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<!--<script src="js/console.log.js"></script>-->
@@ -16,9 +16,8 @@
     <script src="js/fastclick.js"></script>
     <script src="js/jquery.md5.js"></script>
     <script src="js/back_btn.js"></script>
-    <script src="js/scale.js"></script>
     <script src="js/jquery.touchSwipe.min.js"></script>
-    <script src="js/jquery.slides.min.js"></script>
+    <script src="js/query-string.js"></script>
 	<script src="PushNotification.js" type="text/javascript" ></script>
 	
 	<script>
@@ -26,17 +25,6 @@
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
 			document.addEventListener("deviceready", onDeviceReady, false);
 			
-			$("#slides").slidesjs({
-				width: 400,
-				height: 400,
-				navigation: {
-					active: false
-				},
-				pagination: {
-					active: true
-				},
-				play: { auto: false}
-			});
 			//onDeviceReady();
 		}
 
@@ -134,8 +122,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////
 		function onDeviceReady() {
-			playAudioBackground("audio/salame.mp3");
-
+			//navigator.geolocation.getCurrentPosition(onSuccess, onError);
 			/*
 			$("body").swipe({
 				swipe:function(event, direction, distance, duration, fingerCount){
@@ -256,6 +243,20 @@
 				
 			}
 		}
+		
+		
+		
+/*
+/////navigator.geolocation.getCurrentPosition
+		function onSuccess(position) {
+			alert("longitude : " + position.coords.longitude);
+			alert("latitude  : " + position.coords.latitude );
+		}
+		function onError(error) { 
+			// your callback here
+		}
+/////navigator.geolocation.getCurrentPosition
+*/
 	</script>	
 
 		
@@ -263,25 +264,26 @@
 		
 		
 </head>
-<body onload="init();" style="background-color:#000000;text-align:center;">
+<body onload="init();">
 		<div class="container " id="container" >
 			<div id="ajax" class="mypreload">
 				<div style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: #f0f0f0; opacity: 1; cursor: default; position: fixed;overflow:visible;" class="blockUI blockOverlay"></div>
 				<div style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 28%; left: 0%; text-align: center;border: medium none;overflow:visible;" class="blockUI blockMsg blockPage"><img src="images/preloader.gif"></div>
 				<div style="z-index: 1012; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 50%; left: 0%; text-align: center;border: medium none;overflow:visible;height:500px;" class="blockUI blockMsg blockPage"><img src="images/loading.png" width="70%"></div>
 			</div>
-
-			<div id="slides">
-				<img src="images/slider/01.png" onclick="window.location.href='map.html';" />
-				<img src="images/slider/02.png" onclick="window.location.href='ziyarat-ashura.html';" />
-				<img src="images/slider/03.png" />
-				<img src="images/slider/04.png" />
-				<img src="images/slider/05.png" />
-				<img src="images/slider/06.png" />
-				<img src="images/slider/07.png" />
-				<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
-				<a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
+			<div id="small" class="a1" onclick="openURL('http://jazebe.smgroup.ir',false,false);" >
+				<span id="text"><p>بسم الله الرحمن الرحیم</p></span>
 			</div>
+			<a href="map.html">map</a><br/><br/>
+			<a href="ziyarat-ashura.html">ashura</a><br/><br/>
+			<a href="audio.html">audio</a><br/><br/>
+			<a href="audio2.html">audio2</a><br/><br/>
+			<br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/><br/>0<br/>0<br/>
+<script>
+
+
+
+</script>
 		</div>
 </body>
 </html>
