--- a/www/audio.html
+++ b/www/audio.html
@@ -14,7 +14,7 @@
     <script src="phonegap.js"></script>
     <script src="js/fastclick.js"></script>
     <script src="js/jquery.md5.js"></script>
-    <script src="js/back_btn.js"></script>
+    <!--<script src="js/back_btn.js"></script>-->
     <script src="js/query-string.js"></script>
 	
 	<script>
@@ -94,11 +94,11 @@
 
 </style>
 <script>
-	init_audio();
+	init_audio("audio/salame.mp3");
 	var audio_Timer = $("#audioTimer");
 	var duration_Timer = $("#durationTimer");
 
-	function init_audio(){
+	function init_audio(my_file){
 		// Phonegap is loaded and can be used
 		var play_btn = $("#play");
 		var play2_btn = $("#play2");
@@ -113,7 +113,7 @@
 			play2_btn.prop("disabled",true);
 			pause_btn.prop("disabled",false);
 			
-			playAudio("audio/salame.mp3");
+			playAudio(my_file);
 		});
 
 		slider_range.on("change", function(){
