--- a/www/ziyarat-ashura - Copy.html
+++ b/www/ziyarat-ashura - Copy.html
@@ -56,16 +56,14 @@
 		};
 		
 		$(window).load(function() {
-			//alert($(window).height());
-			//alert($(window).height());
-			//alert($(document).height()); 
-			//alert($("#warper").height());
-			$("#main").height($(window).height() - $("#header").height() - $("#footer").height() - 40);
+			//$("#main").height($("#warper").height()-($("#header").height()*1.5));
 			//$("#container").height($("#warper").height()-$("#header").height());
 			//$(".mypreload").delay(100000).html("");
 		});
 		$(document).ready(function() {
 			setTimeout(function(){
+				$("#main").height($("#warper").height()-($("#header").height()*1.7));
+				$("#container").height($("#warper").height()-$("#header").height()*0.85);
 				$(".mypreload").html("");
 				$('#main').addClass("simplebar");
 				$('#main').simplebar({ autoHide: false });
@@ -83,88 +81,70 @@
 .arabic{font-family:Droid_Arabic_Kufi;padding:12px 0;}
 .persian{padding:12px 0;}
 
-#header{
+
+
+
+html, body{
+  height:100%;
+}
+body0{overflow:hidden;width:100%;}
+#bg-top{
 	position:fixed;
 	top:0;
-	left:0;
-	height:100px;
 	width:100%;
+	height:62%;
+	z-index:0;
+	left:0;
 	background:#4a4a4a url("images/top-bg.png") repeat scroll 0 0 / 85px auto;
-	z-index: 786;
 }
-#header-bg {
-  background: transparent url("images/header-bg.png") no-repeat scroll right 0 / auto 70px;
-  bottom: -33px;
-  height: 70px;
-  position: absolute;
-  right: 0;
-  width: 100%;
-}
-#back-btn{
-  background: transparent url("images/back-btn.png") no-repeat scroll right 0 / auto 70px;
-  height: 70px;
-  width: 85px;
-  position: absolute;
-  left: 19px;
-  top:0px;
-  cursor:pointer;
-}
-#header-text {
-  position: absolute;
-  right: 93px;
-  top: -8px;
-}
-#header-text-1th{
-  background: transparent url("images/header-text-1th.png") no-repeat scroll right 0 / auto 86px;
-  height: 86px;
-  width: 19px;
-  float:right;
-}
-#header-text-2th {
-  background: transparent url("images/header-text-2th.png") repeat-x scroll right 0 / auto 86px;
-  color: white;
-  float: right;
-  font-size: 21px;
-  font-weight: bold;
-  height: 86px;
-  line-height: 83px;
-  padding: 0 8px;
-  width: auto;
-}
-#header-text-3th{
-  background: transparent url("images/header-text-3th.png") no-repeat scroll right 0 / auto 86px;
-  height: 86px;
-  width: 42px;
-  float:right;
-}
-#footer{
+#bg-bottom{
 	position:fixed;
 	bottom:0;
-	left:0;
-	height:74px;
 	width:100%;
-	background-image: url("images/footer-bg-center.png"), url("images/footer-bg.png");
-	background-position:center top, left top;
-	background-size:auto 74px,auto 74px;
-	background-repeat:no-repeat,repeat-x;
-	z-index: 786;
+	height:38%;
+	z-index:0;
+	left:0;
+	background:#039c84;
 }
-#warper #container {
-  margin-top: 160px;
-  /*padding:0 20px;*/
+#warper {
+  background: transparent none repeat scroll 0 0;
+  bottom: 0;
+  height: 100%;
+  left: 4%;
+  overflow: hidden;
+  position: fixed;
+  width: 92%;
+  z-index: 3;
 }
-#warper #container #main{
-  width:100%;
+#header {
+  margin: 0 0 -9px !important;
+  padding: 0 !important;
+}
+#container {
+	background-image: url("images/text-border.png");
+	background-position: center bottom;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height:1200px;
+	width: 100%;
+	margin-top: -1.5%;
+}
+#container #main {
   box-sizing: border-box;
+  margin: -2.5% 3% 0 3%;
+  overflow: hidden;
+  /*
+  overflow-x: hidden;
+  overflow-y: scroll;
+  */
+  padding: 0 1%;
+  width: 94%;
 }
-#warper #container #main .simplebar-content{
-  padding:0 20px 70px 15px;
 
-}
 </style>
-<!--footer-bg-center.png-->
+		
 </head>
-<body onload="init();" style="overflow:hidden;width:100%;">
+<body onload="init();">
 <div id="bg-top"></div><div id="bg-bottom"></div>
 <div id="ajax" class="mypreload">
 	<div style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: #f0f0f0; opacity: 1; cursor: default; position: fixed;overflow:visible;" class="blockUI blockOverlay"></div>
@@ -172,22 +152,9 @@
 	<div style="z-index: 1012; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 50%; left: 0%; text-align: center;border: medium none;overflow:visible;height:500px;" class="blockUI blockMsg blockPage"><img src="images/loading.png" width="70%"></div>
 </div>
 		<div id="warper" >
-				<div id="header">
-					<div id="header-bg">
-						<div id="back-btn" onclick="parent.history.back();" ></div>
-						<div id="header-text">
-							<div id="header-text-1th" ></div>
-							<div id="header-text-2th" >بسم الله الرحمن الرحیم</div>
-							<div id="header-text-3th" ></div>
-						</div>
-					</div>
-				</div>
-				<div id="footer">
-					<div id="footer-bg">
-
-					</div>
-				</div>
+				<div id="header"><img src="images/zarurat-header.png" style="width: 100%; margin-top: 4.5%;"></div>
 				<div id="container">
+					<img src="images/zarurat-header-2.png" style="width: 100%;margin-top: -20%;" />
 					<div id="main">
 <div class="doa_text arabic">اَلسَّلاَمُ عَلَیْکَ یَا أَبَا عَبْدِ اللَّهِ السَّلاَمُ عَلَیْکَ یَا ابْنَ رَسُولِ اللَّهِ  (السَّلاَمُ عَلَیْکَ یَا خِیَرَةَ اللَّهِ وَ ابْنَ خِیَرَتِهِ) السَّلاَمُ عَلَیْکَ یَا ابْنَ أَمِیرِ الْمُؤْمِنِینَ وَ ابْنَ سَیِّدِ الْوَصِیِّینَ  السَّلاَمُ عَلَیْکَ یَا ابْنَ فَاطِمَةَ سَیِّدَةِ نِسَاءِ الْعَالَمِینَ  السَّلاَمُ عَلَیْکَ یَا ثَارَ اللَّهِ وَ ابْنَ ثَارِهِ وَ الْوِتْرَ الْمَوْتُورَ السَّلاَمُ عَلَیْکَ وَ عَلَى الْأَرْوَاحِ الَّتِی حَلَّتْ بِفِنَائِکَ عَلَیْکُمْ مِنِّی جَمِیعاً سَلاَمُ اللَّهِ أَبَداً مَا بَقِیتُ وَ بَقِیَ اللَّیْلُ وَ النَّهَارُ یَا أَبَا عَبْدِ اللَّهِ</div>
 <div class="doa_text persian">سلام بر تو اى ابا عبد اللّه، سلام بر تو اى فرزند رسول خدا، سلام بر تو اى فرزند امیر مؤمنان، و فرزند سرور جانشیان، سلام بر تو اى فرزند فاطمه سرور بانوان جهانیان، سلام بر تو اى خون خدا، و فرزند خون خدا و اى تنهاى مظلوم، سلام بر تو و جان‌هایى که به درگاهت فرود آمدند، از جانب من بر همگى شما سلام خدا براى همیشه،تا هستم و تا شب و روز باقى است،</div>
@@ -240,189 +207,6 @@
             <input type="button" id="stop" value="Stop" />
         </div>
 </div>
-<script>
-	init_audio("audio/salame.mp3");
-	var audio_Timer = $("#audioTimer");
-	var duration_Timer = $("#durationTimer");
-
-	function init_audio(my_file){
-		// Phonegap is loaded and can be used
-		var play_btn = $("#play");
-		var play2_btn = $("#play2");
-		var pause_btn = $("#pause");
-		var stop_btn = $("#stop");
-		var slider_range = $("#slider");
-		
-		play_btn.click(function(){		
-			play_btn.css("display","none");
-			play2_btn.css("display","block");
-			$(this).prop("disabled",true);
-			play2_btn.prop("disabled",true);
-			pause_btn.prop("disabled",false);
-			
-			playAudio(my_file);
-		});
-
-		slider_range.on("change", function(){
-			play_btn.prop("disabled",false);
-			play2_btn.prop("disabled",false);
-			pause_btn.prop("disabled",true);
-
-			pausePos = slider_range.val();
-			formatTime(pausePos,audio_Timer);
-			pauseAudio();
-		});
-		
-		pause_btn.click(function(){		
-			play_btn.prop("disabled",false);
-			play2_btn.prop("disabled",false);
-			pause_btn.prop("disabled",true);
-			pauseAudio();
-		});
-		
-		play2_btn.click(function(){			
-			play_btn.prop("disabled",true);
-			play2_btn.prop("disabled",true);
-			pause_btn.prop("disabled",false);
-			
-			PausePlayAudio();
-		});
-		
-		stop_btn.click(function(){
-			// reset slider
-			play_btn.css("display","block");
-			play2_btn.css("display","none");
-			play_btn.prop("disabled",false);
-			play2_btn.prop("disabled",false);
-			pause_btn.prop("disabled",true);
-			$("#slider").val(0);
-			//$("#slider").slider("refresh");
-			stopAudio();
-		});
-		
-	}
-
-
-	audio = null;
-	var audioTimer = null;
-	var pausePos = 0;
-
-
-	function playAudio(file){
-		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
-			file = "/android_asset/www/" + file;
-		}
-		
-		audio = new Media(file, function(){ // success callback
-			console.log("playAudio():Audio Success");
-		}, function(error){ // error callback
-			alert("code: "    + error.code    + "\n" + "message: " + error.message + "\n");
-		});
-		
-		// get audio duration
-		var duration = audio.getDuration();
-		var duration_show = false;
-		
-		// set slider data
-		if( duration > 0 ){
-			formatTime(duration,duration_Timer);
-			$("#slider").attr( "max", Math.round(duration) );
-			//$("#slider").slider("refresh");
-			$("#slider").val(0);
-			duration_show = true;
-		}
-
-		
-		// play audio
-		audio.play({ playAudioWhenScreenIsLocked : true });
-
-		audio.seekTo(pausePos*1000);
-			
-		// update audio position every second
-		if (audioTimer == null) {
-			audioTimer = setInterval(function() {
-				// get audio position
-				audio.getCurrentPosition(
-					function(position) { // get position success
-						if (position > -1) {
-							setAudioPosition(position);
-						}
-					}, function(e) { // get position error
-						alert("Error getting pos=" + e);
-						//setAudioPosition(duration);
-					}
-				);
-				if(!duration_show){
-					duration = audio.getDuration();
-					if( duration > 0 ){
-						formatTime(duration,duration_Timer);
-						$("#slider").attr( "max", Math.round(duration) );
-						//$("#slider").slider("refresh");
-						duration_show = true;
-					}
-				}
-			}, 1000);
-		}
-	}
-
-
-	function pauseAudio() {
-		if (audio) {
-			audio.pause();
-		}
-	}
-	
-	function PausePlayAudio() {
-		if (audio) {
-			audio.pause();
-			audio.seekTo(pausePos*1000);
-			audio.play();
-		}
-	}
-
-
-	function stopAudio() {
-		if (audio) {
-			audio.stop();
-			audio.release();
-		}
-		clearInterval(audioTimer);
-		audioTimer = null;
-		pausePos = 0;
-		formatTime(0,audio_Timer);
-	}
-
-
-	function setAudioPosition(position) {
-		pausePos = position;
-		position = Math.round(position);
-		$("#slider").val(position);
-		formatTime(position,audio_Timer);
-		//$("#slider").slider("refresh");
-		$("#slider").val(0);
-	}
-
-	function formatTime(seconds,Timer) {
-		if (seconds <= 0)
-		{
-			Timer.html("00:00");
-			return;
-		}	
-		var minutes = Math.floor(seconds / 60);
-		
-		if (minutes < 10)
-			minutes = "0" + minutes;
-
-		seconds = seconds % 60;
-		if (seconds < 10)
-			seconds = "0" + seconds;
-		seconds = Math.round(seconds);
-		
-		Timer.html(minutes + ":" + seconds);
-	};
-</script>
-
-
 
 					</div>
 				</div>
