--- a/www/ziyarat-ashura.html
+++ b/www/ziyarat-ashura.html
@@ -60,7 +60,7 @@
 			//alert($(window).height());
 			//alert($(document).height()); 
 			//alert($("#warper").height());
-			$("#main").height($(window).height() - $("#header").height() - $("#footer").height() - 40);
+			$("#main").height($(window).height() - $("#header").height() - $("#footer").height() - 0);
 			//$("#container").height($("#warper").height()-$("#header").height());
 			//$(".mypreload").delay(100000).html("");
 		});
@@ -156,9 +156,11 @@
 #warper #container #main{
   width:100%;
   box-sizing: border-box;
+  padding: 0 16px;
 }
 #warper #container #main .simplebar-content{
-  padding:0 20px 70px 15px;
+  padding2:0 20px 70px 15px;
+  padding:0 5px 0px 5px;
 
 }
 </style>
@@ -177,7 +179,7 @@
 						<div id="back-btn" onclick="parent.history.back();" ></div>
 						<div id="header-text">
 							<div id="header-text-1th" ></div>
-							<div id="header-text-2th" >بسم الله الرحمن الرحیم</div>
+							<div id="header-text-2th" >زیارت عاشورا</div>
 							<div id="header-text-3th" ></div>
 						</div>
 					</div>
@@ -423,7 +425,7 @@
 </script>
 
 
-
+						<br/><br/><br/><br/><br/>
 					</div>
 				</div>
 		</div>
