--- a/www/index.html
+++ b/www/index.html
@@ -278,8 +278,8 @@
 			<div id="slides">
 				<img src="images/slider/01.png" onclick="window.location.href='map.html';" />
 				<img src="images/slider/02.png" onclick="window.location.href='ziyarat-ashura.html';" />
-				<img src="images/slider/03.png" onclick="window.location.href='audio.html';" />
-				<img src="images/slider/04.png" />
+				<img src="images/slider/03.png" onclick="window.location.href='roze.html';" />
+				<img src="images/slider/04.png" onclick="window.location.href='audio.html';" />
 				<img src="images/slider/05.png" />
 				<img src="images/slider/06.png" />
 				<img src="images/slider/07.png" />
