--- a/www/index.html
+++ b/www/index.html
@@ -279,8 +279,8 @@
 				<img src="images/slider/01.png" onclick="window.location.href='map.html';" />
 				<img src="images/slider/02.png" onclick="window.location.href='ziyarat-ashura.html';" />
 				<img src="images/slider/03.png" onclick="window.location.href='roze.html';" />
-				<img src="images/slider/04.png" onclick="window.location.href='audio.html';" />
-				<img src="images/slider/05.png" />
+				<img src="images/slider/04.png" onclick="window.location.href='arabic.html';" />
+				<img src="images/slider/05.png" onclick="window.location.href='audio.html';" />
 				<img src="images/slider/06.png" />
 				<img src="images/slider/07.png" />
 				<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
