--- a/www/ziyarat-ashura.html
+++ b/www/ziyarat-ashura.html
@@ -52,11 +52,32 @@
 			//alert($(window).height());
 			//alert($(document).height()); 
 			//alert($("#warper").height());
-			$("#main").height($(window).height() - $("#header").height() - $("#footer").height() - 70);
+			$("#main").height($(window).height() - $("#header").height() - $("#footer").height()-30);
 			//$("#container").height($("#warper").height()-$("#header").height());
 			//$(".mypreload").delay(100000).html("");
 		});
 		$(document).ready(function() {
+			$('.translate').on('click', function() {
+				$('.persian').toggle();
+				$(this).toggleClass('active');
+			});	
+			$('.fontsize').on('click', function() {
+				$("#controls_size").addClass('opened');
+				$("#controls_over").css('position','fixed');
+			});
+			$('.audio').on('click', function() {
+				$('#smgroup_audio_player').toggle();
+				$('#smgroup_audio_player').addClass('active');
+			});
+			$('#play').on('click', function() {
+				$('#play').hide();
+				$('#pause').css('display','block');
+			});
+			$('.fontsize').on('click', function() {
+				$('#smgroup_audio_player').hide();
+			});
+		
+		
 			setTimeout(function(){
 				$(".mypreload").html("");
 				$('#main').addClass("simplebar");
@@ -64,93 +85,19 @@
 			}, 300);
 		});
 
+			
+
 	</script>	
 
 		
 		
 <style>
-.doa_text{line-height:200%;text-align:justify;direction:rtl;}
-.doa_titr{font-weight:bold;font-size:18px;}
-.arabic{font-family:Droid_Arabic_Kufi;padding:12px 0;}
-.persian{padding:12px 0;}
 
-#header{
-	position:fixed;
-	top:0;
-	left:0;
-	height:100px;
-	width:100%;
-	background:#4a4a4a url("images/top-bg.png") repeat scroll 0 0 / 85px auto;
-	z-index: 786;
-}
-#header-bg {
-  bottom: -33px;
-  height: 70px;
-  position: absolute;
-  right: 0;
-  width: 100%;
-}
-#back-btn{
-  background: transparent url("images/back-btn.png") no-repeat scroll right 0 / auto 70px;
-  height: 70px;
-  width: 85px;
-  position: absolute;
-  left: 0;
-  top:-52px;
-  cursor:pointer;
-}
-#header-text {
-  position: absolute;
-  right: 5px;
-  top: -55px;
-}
-#header-text-2th {
-  color: white;
-  float: right;
-  font-size: 21px;
-  font-weight: bold;
-  height: 86px;
-  line-height: 83px;
-  padding: 0 8px;
-  width: auto;
-}
-#footer{
-	position:fixed;
-	bottom:0;
-	left:0;
-	height:74px;
-	width:100%;
-	background-image: url("images/footer-bg-center.png"), url("images/footer-bg.png");
-	background-position:center top, left top;
-	background-size:auto 74px,auto 74px;
-	background-repeat:no-repeat,repeat-x;
-	z-index: 786;
-}
-#warper #container {
-  margin-top: 160px;
-  /*padding:0 20px;*/
-}
-/*
-#warper #container #main{
-  width:100%;
-  box-sizing: border-box;
-  padding: 0 16px;
-}
-*/
-#warper #container #main .simplebar-content{
-	padding:0 5px 0px 5px;
-}
 
-#warper #container #main {
-  box-sizing: border-box;
-  overflow-x: hidden;
-  padding: 0 16px;
-  width: 100%;
-}
 </style>
 <!--footer-bg-center.png-->
 </head>
-<body onload="init();" style="overflow:hidden;width:100%;">
+<body class="" onload="init();" style="overflow:hidden;width:100%;">
 <div id="bg-top"></div><div id="bg-bottom"></div>
 <div id="ajax" class="mypreload">
 	<div style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: #f0f0f0; opacity: 1; cursor: default; position: fixed;overflow:visible;" class="blockUI blockOverlay"></div>
@@ -159,18 +106,15 @@
 </div>
 		<div id="warper" >
 				<div id="header">
-					<div id="header-bg">
-						<div id="back-btn" onclick="parent.history.back();" ></div>
-						<div id="header-text">
-							<div id="header-text-1th" ></div>
-							<div id="header-text-2th" >بسم الله الرحمن الرحیم</div><!--زیارت عاشورا-->
-							<div id="header-text-3th" ></div>
-						</div>
-					</div>
+					<div id="back-btn" onclick="parent.history.back();"></div>
+					<div id="header-text-2th">زیارت عاشورا</div>
+					<div class="center"></div>
 				</div>
 				<div id="footer">
 					<div id="footer-bg">
-
+						<button class="dw_bottun fontsize">قلم</button>	
+						<button class="dw_bottun audio"></button>	
+						<button class="dw_bottun translate">ترجمه</button>	
 					</div>
 				</div>
 				<div id="container">
@@ -214,15 +158,15 @@
 
 
 <div id="smgroup_audio_player">
-        <span id="audioTimer" >00:00</span> / 
+        <span id="audioTimer" >00:00</span>&nbsp 
         <span id="durationTimer" >01:00</span>
         <div id="audioPosition" >
             <input type="range" name="slider" id="slider" value="0" min="0" max="60" style="padding:0;margin:0;" />
         </div>
-        <div>
-            <input type="button" id="play" value="Play" />
-			<input type="button" id="play2" value="Play" />
-            <input type="button" id="pause" value="Pause" disabled="true"  />
+        <div class="audio_btn">
+            <input type="button" id="play" value="" />
+			<input type="button" id="play2" value="" />
+            <input type="button" id="pause" value="" disabled="true"  />
             <input type="button" id="stop" value="Stop" />
         </div>
 </div>
@@ -236,14 +180,15 @@
 		// Phonegap is loaded and can be used
 		play_btn = $("#play");
 		play2_btn = $("#play2");
-		pause_btn = $("#pause");
+		pause_btn = $("# ");
 		stop_btn = $("#stop");
 		slider_Timer = $("#slider");
 		slider_range = slider_Timer;
 		
 		play_btn.click(function(){		
 			play_btn.css("display","none");
-			play2_btn.css("display","block");
+			//play2_btn.css("display","block");
+			pause_btn.css("display","block");
 			$(this).prop("disabled",true);
 			play2_btn.prop("disabled",true);
 			pause_btn.prop("disabled",false);
@@ -261,14 +206,21 @@
 			pauseAudio();
 		});
 		
-		pause_btn.click(function(){		
+		pause_btn.click(function(){	
+
+			play2_btn.css("display","block");
+			pause_btn.css("display","none");
+
 			play_btn.prop("disabled",false);
 			play2_btn.prop("disabled",false);
 			pause_btn.prop("disabled",true);
 			pauseAudio();
 		});
 		
-		play2_btn.click(function(){			
+		play2_btn.click(function(){	
+
+			pause_btn.css("display","block");
+			play2_btn.css("display","none");		
 			play_btn.prop("disabled",true);
 			play2_btn.prop("disabled",true);
 			pause_btn.prop("disabled",false);
@@ -411,7 +363,6 @@
 </script>
 
 
-						<br/><br/>
 					</div>
 				</div>
 		</div>
@@ -419,9 +370,9 @@
 <div id="controls_size">
 	<div id="css_style"></div>
 	<div id="controls_over"></div>
-	<a href="#" id="small" class="selected">قلم</a>
-	<a href="#" id="medium">قلم</a>
 	<a href="#" id="large">قلم</a>
+	<a href="#" id="medium">قلم</a>
+	<a href="#" id="small" class=>قلم</a>
 </div>
 </body>
 </html>
