--- a/www/arabic.html
+++ b/www/arabic.html
@@ -54,6 +54,7 @@
 			//alert($(window).height());
 			//alert($(document).height()); 
 			//alert($("#warper").height());
+			//$("").css("padding-top","24px");
 			$("#main").height($(window).height() - $("#header").height() - $("#footer").height()-30);
 			//$("#container").height($("#warper").height()-$("#header").height());
 			//$(".mypreload").delay(100000).html("");
@@ -75,7 +76,7 @@
 		
 		
 <style>
-
+.simplebar-content{padding-top:30px !important;}
 
 
 
