--- a/www/arabic.html
+++ b/www/arabic.html
@@ -76,7 +76,7 @@
 		
 		
 <style>
-.simplebar-content{padding-top:30px !important;}
+/*.simplebar-content{padding-top:30px !important;}*/
 
 
 
@@ -168,7 +168,7 @@ $(document).ready(function() {
 	});
 	search_input = $('#data_table_filter').find('input');
 	search_input.attr("placeholder", "جستجو");
-	$('#data_table_filter').css("top",$("#header").height());
+	//$('#data_table_filter').css("top",$("#header").height());
 	search_input.focus(function() {
 		$('#footer').css("display","none");
 		$('#translate_list').css("display","none");
