--- a/www/arabic.html
+++ b/www/arabic.html
@@ -6,11 +6,11 @@
 	
     <title>بسم الله الرحمن الرحیم</title>
 	
-	<link rel="stylesheet" type="text/css" href="css/reset.css00">
-	<link rel="stylesheet" type="text/css" href="css/font.css00" />
-	<link rel="stylesheet" type="text/css" href="css/simplebar.css00" />
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/font.css" />
+	<link rel="stylesheet" type="text/css" href="css/simplebar.css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css" />
-	<link rel="stylesheet" type="text/css" href="css/main.css00">
+	<link rel="stylesheet" type="text/css" href="css/main.css000">
 
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<script src="js/console.log.js"></script>
