--- a/www/arabic.html
+++ b/www/arabic.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/font.css" />
 	<link rel="stylesheet" type="text/css" href="css/simplebar.css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css" />
-	<link rel="stylesheet" type="text/css" href="css/main.css000">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<script src="js/console.log.js"></script>
