--- a/www/ziyarat-ashura.html
+++ b/www/ziyarat-ashura.html
@@ -131,7 +131,7 @@
 					</div>
 				</div>
 				<div id="container">
-					<div id="main">
+					<div id="main" class="">
 <div class="doa_text arabic">اَلسَّلاَمُ عَلَیْکَ یَا أَبَا عَبْدِ اللَّهِ السَّلاَمُ عَلَیْکَ یَا ابْنَ رَسُولِ اللَّهِ  (السَّلاَمُ عَلَیْکَ یَا خِیَرَةَ اللَّهِ وَ ابْنَ خِیَرَتِهِ) السَّلاَمُ عَلَیْکَ یَا ابْنَ أَمِیرِ الْمُؤْمِنِینَ وَ ابْنَ سَیِّدِ الْوَصِیِّینَ  السَّلاَمُ عَلَیْکَ یَا ابْنَ فَاطِمَةَ سَیِّدَةِ نِسَاءِ الْعَالَمِینَ  السَّلاَمُ عَلَیْکَ یَا ثَارَ اللَّهِ وَ ابْنَ ثَارِهِ وَ الْوِتْرَ الْمَوْتُورَ السَّلاَمُ عَلَیْکَ وَ عَلَى الْأَرْوَاحِ الَّتِی حَلَّتْ بِفِنَائِکَ عَلَیْکُمْ مِنِّی جَمِیعاً سَلاَمُ اللَّهِ أَبَداً مَا بَقِیتُ وَ بَقِیَ اللَّیْلُ وَ النَّهَارُ یَا أَبَا عَبْدِ اللَّهِ</div>
 <div class="doa_text persian">سلام بر تو اى ابا عبد اللّه، سلام بر تو اى فرزند رسول خدا، سلام بر تو اى فرزند امیر مؤمنان، و فرزند سرور جانشیان، سلام بر تو اى فرزند فاطمه سرور بانوان جهانیان، سلام بر تو اى خون خدا، و فرزند خون خدا و اى تنهاى مظلوم، سلام بر تو و جان‌هایى که به درگاهت فرود آمدند، از جانب من بر همگى شما سلام خدا براى همیشه،تا هستم و تا شب و روز باقى است،</div>
 <div class="doa_text arabic">لَقَدْ عَظُمَتِ الرَّزِیَّةُ وَ جَلَّتْ وَ عَظُمَتِ الْمُصِیبَةُ بِکَ (بِکُمْ) عَلَیْنَا وَ عَلَى جَمِیعِ أَهْلِ الْإِسْلاَمِ  وَ جَلَّتْ وَ عَظُمَتْ مُصِیبَتُکَ فِی السَّمَاوَاتِ عَلَى جَمِیعِ أَهْلِ السَّمَاوَاتِ  فَلَعَنَ اللَّهُ أُمَّةً أَسَّسَتْ أَسَاسَ الظُّلْمِ وَ الْجَوْرِ عَلَیْکُمْ أَهْلَ الْبَیْتِ  وَ لَعَنَ اللَّهُ أُمَّةً دَفَعَتْکُمْ عَنْ مَقَامِکُمْ وَ أَزَالَتْکُمْ عَنْ مَرَاتِبِکُمُ الَّتِی رَتَّبَکُمُ اللَّهُ فِیهَا وَ لَعَنَ اللَّهُ أُمَّةً قَتَلَتْکُمْ</div>
