--- a/www/arabic.html
+++ b/www/arabic.html
@@ -174,6 +174,12 @@ $(document).ready(function() {
 	
 	$("#goto_search").on('click', function() {
 		search_input.focus();
+        $('.simplebar-scroll-content').animate({
+			scrollTop: 0
+        }, 0);
+        $('#main').animate({
+			scrollTop: 0
+        }, 0);
 	});
 	search_input.focus(function() {
 		$('#footer').css("display","none");
